--- a/api-html/overview-frame.html
+++ b/api-html/overview-frame.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>
-Overview (JRis unspecified)
+Overview (KRis 0.0.1-beta.4.115+06c9579)
 </title>
 
 <link rel="stylesheet" type="text/css" href="stylesheet.css" title="Style">
@@ -13,7 +13,7 @@ Overview (JRis unspecified)
 
 <table border="0" width="100%">
 <tr>
-<th align="left" nowrap>JRis unspecified</th>
+<th align="left" nowrap>KRis 0.0.1-beta.4.115+06c9579</th>
 </tr>
 </table>
 
