Publish guide for 0.1.0-rc.1

--- a/api-html/index.html
+++ b/api-html/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-KRis 0.0.1-beta.4.115+06c9579
+KRis 0.1.0-rc.1
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
