--- a/api-html/overview-summary.html
+++ b/api-html/overview-summary.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-Overview (KRis 0.0.1-beta.4.115+06c9579)
+Overview (KRis 0.1.0-rc.1)
 </TITLE>
 <LINK REL ="stylesheet" TYPE="text/css" HREF="stylesheet.css" TITLE="Style">
 <SCRIPT type="text/javascript">
@@ -18,7 +18,7 @@ parent.document.title = document.title;
 <TABLE BORDER="0" WIDTH="100%" CELLPADDING="1" CELLSPACING="0">
     <TR>
         <TD ALIGN="right" VALIGN="top" ROWSPAN=3><EM>
-            <b>KRis 0.0.1-beta.4.115+06c9579</b></EM>
+            <b>KRis 0.1.0-rc.1</b></EM>
         </TD>
     </TR>
 </TABLE>
