--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h1>Library for reading/writing RIS files</h1>
 <div class="details">
 <span id="author" class="author">Urs Joss</span><br>
-<span id="revnumber">version 0.1.0-rc.1</span>
+<span id="revnumber">version 0.1.0-rc.1.116+f781e76</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -631,8 +631,8 @@ We will receive a list of [RisRecord] instances.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 0.1.0-rc.1<br>
-Last updated 2019-12-09 07:59:38 +0100
+Version 0.1.0-rc.1.116+f781e76<br>
+Last updated 2020-03-01 15:43:00 UTC
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
