--- a/api-html/index.html
+++ b/api-html/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-KRis 0.1.0-rc.1.116+f781e76
+KRis 0.1.0-rc.2
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
