--- a/api-html/overview-frame.html
+++ b/api-html/overview-frame.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>
-Overview (KRis 0.1.0-rc.1.116+f781e76)
+Overview (KRis 0.1.0-rc.2)
 </title>
 
 <link rel="stylesheet" type="text/css" href="stylesheet.css" title="Style">
@@ -13,7 +13,7 @@ Overview (KRis 0.1.0-rc.1.116+f781e76)
 
 <table border="0" width="100%">
 <tr>
-<th align="left" nowrap>KRis 0.1.0-rc.1.116+f781e76</th>
+<th align="left" nowrap>KRis 0.1.0-rc.2</th>
 </tr>
 </table>
 
