Publish guide for 0.2.0-beta.0.3+20200304T225522Z

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h1>Library for reading/writing RIS files</h1>
 <div class="details">
 <span id="author" class="author">Urs Joss</span><br>
-<span id="revnumber">version 0.1.0</span>
+<span id="revnumber">version 0.2.0-beta.0.3+20200304T225522Z</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -187,8 +187,8 @@ We can do that by providing a list of RIS tag names (as string) in the order we&
 </td>
 <td class="content">
 <div class="paragraph">
-<p>All the subsequent method calls optionally accept a list of RIS tag names, specifying the sort order.
-We will not explicitly mention this optional for the following examples.</p>
+<p>All the subsequent method calls optionally accept a list of RIS tag names, specifying the tag sort order.
+We will not explicitly mention this option in the subsequent examples.</p>
 </div>
 </td>
 </tr>
@@ -432,8 +432,8 @@ We can do that by providing a list of RIS tag names (as string) in the order we&
 </td>
 <td class="content">
 <div class="paragraph">
-<p>All the subsequent method calls optionally accept a list of RIS tag names, specifying the sort order.
-We will not explicitly mention this optional for the following examples.</p>
+<p>All the subsequent method calls optionally accept a list of RIS tag names, specifying the tag sort order.
+We will not explicitly mention this option in the subsequent examples.</p>
 </div>
 </td>
 </tr>
@@ -631,8 +631,8 @@ We will receive a list of [RisRecord] instances.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 0.1.0<br>
-Last updated 2020-03-01 22:45:12 UTC
+Version 0.2.0-beta.0.3+20200304T225522Z<br>
+Last updated 2020-03-01 13:55:36 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
