--- a/api-html/index.html
+++ b/api-html/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-KRis 0.1.0
+KRis 0.2.0-beta.0.3+20200304T225522Z
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
