Publish guide for 0.1.1

--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@ We will receive a list of [RisRecord] instances.</p>
 <div id="footer">
 <div id="footer-text">
 Version 0.1.1<br>
-Last updated 2020-03-01 13:55:36 +0100
+Last updated 2020-03-10 06:54:59 UTC
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
