--- a/api-html/index.html
+++ b/api-html/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-KRis 0.2.0
+KRis 0.3.0-beta.0.1+20200310T214513Z
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
