Publish guide for 0.3.0-beta.0.5+12d3d8a

--- a/api-html/allclasses-frame.html
+++ b/api-html/allclasses-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-All Classes (KRis 0.3.0-beta.0.1+20200310T222001Z)
+All Classes (KRis 0.3.0-beta.0.5+12d3d8a)
 </TITLE>
 
 
@@ -24,6 +24,39 @@ All Classes
 <TD NOWRAP>
 
 <SPAN CLASS="FrameItemFont">
+
+<A HREF="ch/difty/kris/ExportExtensions.html" target="classFrame">ExportExtensions</A>
+<BR>
+
+<A HREF="ch/difty/kris/ImportExtensions.html" target="classFrame">ImportExtensions</A>
+<BR>
+
+<A HREF="ch/difty/kris/InternalExtensions.html" target="classFrame">InternalExtensions</A>
+<BR>
+
+<A HREF="ch/difty/kris/KRis.html" target="classFrame">KRis</A>
+<BR>
+
+<A HREF="ch/difty/kris/KRisExtensions.html" target="classFrame">KRisExtensions</A>
+<BR>
+
+<A HREF="ch/difty/kris/KRisIO.html" target="classFrame">KRisIO</A>
+<BR>
+
+<A HREF="ch/difty/kris/implementation/RisExport.html" target="classFrame">RisExport</A>
+<BR>
+
+<A HREF="ch/difty/kris/implementation/RisImport.html" target="classFrame">RisImport</A>
+<BR>
+
+<A HREF="ch/difty/kris/domain/RisRecord.html" target="classFrame">RisRecord</A>
+<BR>
+
+<A HREF="ch/difty/kris/domain/RisTag.html" target="classFrame">RisTag</A>
+<BR>
+
+<A HREF="ch/difty/kris/domain/RisType.html" target="classFrame">RisType</A>
+<BR>
 
 </SPAN></TD>
 </TR>
