--- a/api-html/overview-frame.html
+++ b/api-html/overview-frame.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>
-Overview (KRis 0.3.0-beta.0.1+20200310T222001Z)
+Overview (KRis 0.3.0-beta.0.5+12d3d8a)
 </title>
 
 <link rel="stylesheet" type="text/css" href="stylesheet.css" title="Style">
@@ -13,7 +13,7 @@ Overview (KRis 0.3.0-beta.0.1+20200310T222001Z)
 
 <table border="0" width="100%">
 <tr>
-<th align="left" nowrap>KRis 0.3.0-beta.0.1+20200310T222001Z</th>
+<th align="left" nowrap>KRis 0.3.0-beta.0.5+12d3d8a</th>
 </tr>
 </table>
 
@@ -24,6 +24,15 @@ Overview (KRis 0.3.0-beta.0.1+20200310T222001Z)
 <P>
 <SPAN CLASS="FrameHeadingFont">Packages</SPAN><BR>
 
+
+<SPAN CLASS="FrameItemFont"><a href="ch/difty/kris/package-frame.html" target="packageFrame">ch.difty.kris</A></SPAN>
+<BR>
+
+<SPAN CLASS="FrameItemFont"><a href="ch/difty/kris/domain/package-frame.html" target="packageFrame">ch.difty.kris.domain</A></SPAN>
+<BR>
+
+<SPAN CLASS="FrameItemFont"><a href="ch/difty/kris/implementation/package-frame.html" target="packageFrame">ch.difty.kris.implementation</A></SPAN>
+<BR>
 
 </P>
 </TD>
