--- a/api-html/allclasses-frame.html
+++ b/api-html/allclasses-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-All Classes (KRis 0.3.0-beta.0.5+12d3d8a)
+All Classes (KRis 0.3.0-beta.0.5+20200312T214445Z)
 </TITLE>
 
 
