--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h1>Library for reading/writing RIS files</h1>
 <div class="details">
 <span id="author" class="author">Urs Joss</span><br>
-<span id="revnumber">version 0.3.0-beta.0.5+12d3d8a</span>
+<span id="revnumber">version 0.3.0-beta.0.5+20200312T214445Z</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -631,7 +631,7 @@ We will receive a list of [RisRecord] instances.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 0.3.0-beta.0.5+12d3d8a<br>
+Version 0.3.0-beta.0.5+20200312T214445Z<br>
 Last updated 2020-03-12 22:43:27 +0100
 </div>
 </div>
