Publish guide for 0.3.0-beta.0.6+619db1f

--- a/api-html/allclasses-frame.html
+++ b/api-html/allclasses-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-All Classes (KRis 0.3.0-beta.0.6+20200312T214919Z)
+All Classes (KRis 0.3.0-beta.0.6+619db1f)
 </TITLE>
 
 
