--- a/api-html/index.html
+++ b/api-html/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-KRis 0.3.0-beta.0.6+20200312T214919Z
+KRis 0.3.0-beta.0.6+619db1f
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
