--- a/api-html/ch/difty/kris/domain/package-frame.html
+++ b/api-html/ch/difty/kris/domain/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-ch.difty.kris.domain (KRis 0.3.0-beta.0.6+20200312T214919Z)
+ch.difty.kris.domain (KRis 0.3.0-beta.0.6+619db1f)
 </TITLE>
 
 <META NAME="keywords" CONTENT="ch.difty.kris.domain">
