Publish guide for 0.3.0-beta.0.6+20200314T191009Z

--- a/api-html/index.html
+++ b/api-html/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-KRis 0.3.0-beta.0.6+619db1f
+kris 0.3.0-beta.0.6+20200314T191009Z
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
