--- a/api-html/allclasses-frame.html
+++ b/api-html/allclasses-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-All Classes (KRis 0.3.0-beta.0.6+619db1f)
+All Classes (kris 0.3.0-beta.0.6+20200314T191009Z)
 </TITLE>
 
 
