--- a/api-html/ch/difty/kris/package-frame.html
+++ b/api-html/ch/difty/kris/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-ch.difty.kris (KRis 0.3.0-beta.0.6+619db1f)
+ch.difty.kris (kris 0.3.0-beta.0.6+20200314T191009Z)
 </TITLE>
 
 <META NAME="keywords" CONTENT="ch.difty.kris">
