--- a/api-html/overview-frame.html
+++ b/api-html/overview-frame.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>
-Overview (KRis 0.3.0-beta.0.6+619db1f)
+Overview (kris 0.3.0-beta.0.6+20200314T191009Z)
 </title>
 
 <link rel="stylesheet" type="text/css" href="stylesheet.css" title="Style">
@@ -13,7 +13,7 @@ Overview (KRis 0.3.0-beta.0.6+619db1f)
 
 <table border="0" width="100%">
 <tr>
-<th align="left" nowrap>KRis 0.3.0-beta.0.6+619db1f</th>
+<th align="left" nowrap>kris 0.3.0-beta.0.6+20200314T191009Z</th>
 </tr>
 </table>
 
