Publish guide for 0.3.0-beta.0.1+8343321

--- a/api-html/index.html
+++ b/api-html/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-kris 0.3.0-beta.0.6+20200314T191009Z
+KRis 0.3.0-beta.0.1+8343321
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
