--- a/api-html/index.html
+++ b/api-html/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-KRis 0.3.0-beta.0.1+8343321
+kris 0.3.0-beta.0.7+20200314T234000Z
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
