Publish guide for 0.3.0-beta.0.1+8343321

--- a/api-html/allclasses-frame.html
+++ b/api-html/allclasses-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-All Classes (kris 0.3.0-beta.0.7+20200314T234000Z)
+All Classes (KRis 0.3.0-beta.0.1+8343321)
 </TITLE>
 
 
