--- a/api-html/overview-frame.html
+++ b/api-html/overview-frame.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>
-Overview (kris 0.3.0-beta.0.7+20200314T234000Z)
+Overview (KRis 0.3.0-beta.0.1+8343321)
 </title>
 
 <link rel="stylesheet" type="text/css" href="stylesheet.css" title="Style">
@@ -13,7 +13,7 @@ Overview (kris 0.3.0-beta.0.7+20200314T234000Z)
 
 <table border="0" width="100%">
 <tr>
-<th align="left" nowrap>kris 0.3.0-beta.0.7+20200314T234000Z</th>
+<th align="left" nowrap>KRis 0.3.0-beta.0.1+8343321</th>
 </tr>
 </table>
 
