--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h1>Library for reading/writing RIS files</h1>
 <div class="details">
 <span id="author" class="author">Urs Joss</span><br>
-<span id="revnumber">version 0.3.0-beta.0.7+20200314T234000Z</span>
+<span id="revnumber">version 0.3.0-beta.0.1+8343321</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -631,8 +631,8 @@ We will receive a list of [RisRecord] instances.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 0.3.0-beta.0.7+20200314T234000Z<br>
-Last updated 2020-03-14 23:49:01 +0100
+Version 0.3.0-beta.0.1+8343321<br>
+Last updated 2020-03-15 00:44:55 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
