--- a/api-html/ch/difty/kris/package-frame.html
+++ b/api-html/ch/difty/kris/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-ch.difty.kris (kris 0.3.0-beta.0.7+20200314T234000Z)
+ch.difty.kris (KRis 0.3.0-beta.0.1+8343321)
 </TITLE>
 
 <META NAME="keywords" CONTENT="ch.difty.kris">
