--- a/api-html/ch/difty/kris/domain/package-frame.html
+++ b/api-html/ch/difty/kris/domain/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-ch.difty.kris.domain (kris 0.3.0-beta.0.7+44d9397)
+ch.difty.kris.domain (kris 0.3.0-beta.0.7+20200315T001403Z)
 </TITLE>
 
 <META NAME="keywords" CONTENT="ch.difty.kris.domain">
