Publish guide for 0.3.0-beta.0.7+c9b64fe

--- a/api-html/ch/difty/kris/package-frame.html
+++ b/api-html/ch/difty/kris/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-ch.difty.kris (kris 0.3.0-beta.0.7+20200315T001403Z)
+ch.difty.kris (kris 0.3.0-beta.0.7+c9b64fe)
 </TITLE>
 
 <META NAME="keywords" CONTENT="ch.difty.kris">
