--- a/api-html/index.html
+++ b/api-html/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-kris 0.3.0-beta.0.7+20200315T001403Z
+kris 0.3.0-beta.0.7+c9b64fe
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
