--- a/api-html/allclasses-frame.html
+++ b/api-html/allclasses-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-All Classes (kris 0.3.0-beta.0.7+20200315T001403Z)
+All Classes (kris 0.3.0-beta.0.7+c9b64fe)
 </TITLE>
 
 
