--- a/api-html/allclasses-frame.html
+++ b/api-html/allclasses-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-All Classes (kris 0.3.0-beta.0.5+20200315T082926Z)
+All Classes (kris 0.3.0-beta.0.5+138d99f)
 </TITLE>
 
 
