--- a/api-html/ch/difty/kris/implementation/package-frame.html
+++ b/api-html/ch/difty/kris/implementation/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-ch.difty.kris.implementation (kris 0.3.0-beta.0.5+20200315T082926Z)
+ch.difty.kris.implementation (kris 0.3.0-beta.0.5+138d99f)
 </TITLE>
 
 <META NAME="keywords" CONTENT="ch.difty.kris.implementation">
