--- a/api-html/index.html
+++ b/api-html/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-kris 0.3.0-beta.0.5+20200315T082926Z
+kris 0.3.0-beta.0.5+138d99f
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
