--- a/api-html/overview-frame.html
+++ b/api-html/overview-frame.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>
-Overview (kris 0.3.0-beta.0.5+20200315T082926Z)
+Overview (kris 0.3.0-beta.0.5+138d99f)
 </title>
 
 <link rel="stylesheet" type="text/css" href="stylesheet.css" title="Style">
@@ -13,7 +13,7 @@ Overview (kris 0.3.0-beta.0.5+20200315T082926Z)
 
 <table border="0" width="100%">
 <tr>
-<th align="left" nowrap>kris 0.3.0-beta.0.5+20200315T082926Z</th>
+<th align="left" nowrap>kris 0.3.0-beta.0.5+138d99f</th>
 </tr>
 </table>
 
