--- a/api-html/ch/difty/kris/package-frame.html
+++ b/api-html/ch/difty/kris/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-ch.difty.kris (kris 0.3.0-beta.0.8+c562cc6)
+ch.difty.kris (kris 0.3.0-beta.0.8+20200318T074938Z)
 </TITLE>
 
 <META NAME="keywords" CONTENT="ch.difty.kris">
