--- a/api-html/allclasses-frame.html
+++ b/api-html/allclasses-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-All Classes (kris 0.3.0-beta.0.8+20200318T074938Z)
+All Classes (kris 0.3.0-beta.0.8+a845880)
 </TITLE>
 
 
