--- a/api-html/index.html
+++ b/api-html/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-kris 0.3.0-beta.0.8+20200318T074938Z
+kris 0.3.0-beta.0.8+a845880
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
