--- a/index.html
+++ b/index.html
@@ -600,8 +600,8 @@ We will receive a list of [RisRecord] instances.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 0.3.0-beta.0.13+5b8130a<br>
-Last updated 2020-03-19 22:05:01 +0100
+Version 0.2.1<br>
+Last updated 2020-03-28 21:11:46 UTC
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
