--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ We will receive a list of [RisRecord] instances.</p>
 <div id="footer">
 <div id="footer-text">
 Version 0.2.1<br>
-Last updated 2020-03-28 21:11:46 UTC
+Last updated 2020-03-28 21:40:15 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
