Publish guide for 0.3.0-beta.0.3+7e4836a

--- a/api-html/ch/difty/kris/package-frame.html
+++ b/api-html/ch/difty/kris/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-ch.difty.kris (KRis 0.2.1)
+ch.difty.kris (KRis 0.3.0-beta.0.3+7e4836a)
 </TITLE>
 
 <META NAME="keywords" CONTENT="ch.difty.kris">
