--- a/api-html/index.html
+++ b/api-html/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-KRis 0.2.1
+KRis 0.3.0-beta.0.3+7e4836a
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
