--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ We will receive a list of [RisRecord] instances.</p>
 <h2 id="_links"><a class="anchor" href="#_links"></a>5. Links</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><a href="kapi/kris/index.html" target="_blank" rel="noopener">Kotlindoc</a></p>
+<p><a href="kapi/-k-ris/index.html" target="_blank" rel="noopener">Kotlindoc</a></p>
 </div>
 <div class="paragraph">
 <p><a href="api-html/index.html" target="_blank" rel="noopener">Source</a></p>
@@ -600,8 +600,8 @@ We will receive a list of [RisRecord] instances.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 0.2.1<br>
-Last updated 2020-03-28 21:40:15 +0100
+Version 0.3.0-beta.0.3+7e4836a<br>
+Last updated 2020-03-28 22:30:34 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
