Publish guide for 0.2.2

--- a/api-html/ch/difty/kris/KRisExtensions.html
+++ b/api-html/ch/difty/kris/KRisExtensions.html
@@ -90,7 +90,7 @@ KRisExtensions.kt
 <a name="59"><font color="#808080">059</font>&nbsp;</a><font color="#ffffff"></font><br />
 <a name="60"><font color="#808080">060</font>&nbsp;</a><font color="#008000">/**</font><br />
 <a name="61"><font color="#808080">061</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Converts&nbsp;a&nbsp;flow&nbsp;of&nbsp;[RisRecord]s&nbsp;into&nbsp;a&nbsp;flow&nbsp;of&nbsp;[String]s&nbsp;in&nbsp;RIS&nbsp;file&nbsp;format.</font><br />
-<a name="62"><font color="#808080">062</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Optionally&nbsp;accepts&nbsp;a&nbsp;list&nbsp;of&nbsp;names&nbsp;of&nbsp;[RisTag]s&nbsp;defining&nbsp;a&nbsp;sort&nbsp;order&nbsp;for&nbsp;the&nbsp;[RisTag]s&nbsp;in&nbsp;the&nbsp;file.</font><br />
+<a name="62"><font color="#808080">062</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Optionally&nbsp;accepts&nbsp;a&nbsp;list&nbsp;of&nbsp;names&nbsp;of&nbsp;RisTags&nbsp;defining&nbsp;a&nbsp;sort&nbsp;order&nbsp;for&nbsp;the&nbsp;RisTags&nbsp;in&nbsp;the&nbsp;file.</font><br />
 <a name="63"><font color="#808080">063</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*/</font><br />
 <a name="64"><font color="#808080">064</font>&nbsp;</a><font color="#646464">@JvmOverloads</font><br />
 <a name="65"><font color="#808080">065</font>&nbsp;</a><font color="#646464">@ExperimentalCoroutinesApi</font><br />
@@ -98,7 +98,7 @@ KRisExtensions.kt
 <a name="67"><font color="#808080">067</font>&nbsp;</a><font color="#ffffff"></font><br />
 <a name="68"><font color="#808080">068</font>&nbsp;</a><font color="#008000">/**</font><br />
 <a name="69"><font color="#808080">069</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Converts&nbsp;a&nbsp;list&nbsp;of&nbsp;[RisRecord]s&nbsp;into&nbsp;a&nbsp;list&nbsp;of&nbsp;[String]s&nbsp;in&nbsp;RIS&nbsp;file&nbsp;format.</font><br />
-<a name="70"><font color="#808080">070</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Optionally&nbsp;accepts&nbsp;a&nbsp;list&nbsp;of&nbsp;names&nbsp;of&nbsp;[RisTag]s&nbsp;defining&nbsp;a&nbsp;sort&nbsp;order&nbsp;for&nbsp;the&nbsp;[RisTag]s&nbsp;in&nbsp;the&nbsp;file.</font><br />
+<a name="70"><font color="#808080">070</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Optionally&nbsp;accepts&nbsp;a&nbsp;list&nbsp;of&nbsp;names&nbsp;of&nbsp;RisTags&nbsp;defining&nbsp;a&nbsp;sort&nbsp;order&nbsp;for&nbsp;the&nbsp;RisTags&nbsp;in&nbsp;the&nbsp;file.</font><br />
 <a name="71"><font color="#808080">071</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*/</font><br />
 <a name="72"><font color="#808080">072</font>&nbsp;</a><font color="#646464">@JvmOverloads</font><br />
 <a name="73"><font color="#808080">073</font>&nbsp;</a><font color="#646464">@ExperimentalCoroutinesApi</font><br />
