--- a/kapi/-k-ris/ch.difty.kris/kotlinx.coroutines.flow.-flow/index.html
+++ b/kapi/-k-ris/ch.difty.kris/kotlinx.coroutines.flow.-flow/index.html
@@ -16,7 +16,7 @@
 </td>
 <td>
 <p>Converts a flow of <a href="../../ch.difty.kris.domain/-ris-record/index.html">RisRecord</a>s into a flow of <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html">String</a>s in RIS file format.
-Optionally accepts a list of names of <a href="#">RisTag</a>s defining a sort order for the <a href="#">RisTag</a>s in the file.</p>
+Optionally accepts a list of names of RisTags defining a sort order for the RisTags in the file.</p>
 <code><span class="keyword">fun </span><span class="identifier">Flow</span><span class="symbol">&lt;</span><a href="../../ch.difty.kris.domain/-ris-record/index.html"><span class="identifier">RisRecord</span></a><span class="symbol">&gt;</span><span class="symbol">.</span><span class="identifier">toRisLines</span><span class="symbol">(</span><span class="identifier" id="ch.difty.kris$toRisLines(kotlinx.coroutines.flow.Flow((ch.difty.kris.domain.RisRecord)), kotlin.collections.List((kotlin.String)))/sort">sort</span><span class="symbol">:</span>&nbsp;<a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html"><span class="identifier">List</span></a><span class="symbol">&lt;</span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">&gt;</span>&nbsp;<span class="symbol">=</span>&nbsp;emptyList()<span class="symbol">)</span><span class="symbol">: </span><span class="identifier">Flow</span><span class="symbol">&lt;</span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html"><span class="identifier">String</span></a><span class="symbol">&gt;</span></code></td>
 </tr>
 <tr>
