--- a/api-html/ch/difty/kris/ImportExtensions.html
+++ b/api-html/ch/difty/kris/ImportExtensions.html
@@ -39,7 +39,7 @@ ImportExtensions.kt
 <a name="8"><font color="#808080">08</font>&nbsp;</a><font color="#ffffff"></font><br />
 <a name="9"><font color="#808080">09</font>&nbsp;</a><font color="#ffffff"></font><br />
 <a name="10"><font color="#808080">10</font>&nbsp;</a><font color="#008000">/**</font><br />
-<a name="11"><font color="#808080">11</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Converts&nbsp;the&nbsp;RISFile&nbsp;lines&nbsp;provided&nbsp;by&nbsp;the&nbsp;reader&nbsp;as&nbsp;receiver&nbsp;into&nbsp;a&nbsp;list&nbsp;of&nbsp;[RisRecord]s.</font><br />
+<a name="11"><font color="#808080">11</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Converts&nbsp;the&nbsp;RISFile&nbsp;lines&nbsp;provided&nbsp;by&nbsp;the&nbsp;reader&nbsp;as&nbsp;receiver&nbsp;into&nbsp;a&nbsp;list&nbsp;of&nbsp;RisRecords.</font><br />
 <a name="12"><font color="#808080">12</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;May&nbsp;throw&nbsp;an&nbsp;[IOException]&nbsp;if&nbsp;the&nbsp;reader&nbsp;fails&nbsp;to&nbsp;deliver&nbsp;lines&nbsp;or&nbsp;a&nbsp;[KRisException]</font><br />
 <a name="13"><font color="#808080">13</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;if&nbsp;the&nbsp;lines&nbsp;cannot&nbsp;be&nbsp;parsed&nbsp;successfully.</font><br />
 <a name="14"><font color="#808080">14</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*/</font><br />
@@ -47,7 +47,7 @@ ImportExtensions.kt
 <a name="16"><font color="#808080">16</font>&nbsp;</a><font color="#000000">fun&nbsp;Reader.process</font><font color="#000000">()&nbsp;</font><font color="#000000">=&nbsp;KRisIO.process</font><font color="#000000">(</font><font color="#0000c0"><b>this</b></font><font color="#000000">)</font><br />
 <a name="17"><font color="#808080">17</font>&nbsp;</a><font color="#ffffff"></font><br />
 <a name="18"><font color="#808080">18</font>&nbsp;</a><font color="#008000">/**</font><br />
-<a name="19"><font color="#808080">19</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Converts&nbsp;the&nbsp;RISFile&nbsp;lines&nbsp;in&nbsp;the&nbsp;[File]&nbsp;provided&nbsp;as&nbsp;receiver&nbsp;into&nbsp;a&nbsp;list&nbsp;of&nbsp;[RisRecord]s.</font><br />
+<a name="19"><font color="#808080">19</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Converts&nbsp;the&nbsp;RISFile&nbsp;lines&nbsp;in&nbsp;the&nbsp;[File]&nbsp;provided&nbsp;as&nbsp;receiver&nbsp;into&nbsp;a&nbsp;list&nbsp;of&nbsp;RisRecords.</font><br />
 <a name="20"><font color="#808080">20</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;May&nbsp;throw&nbsp;an&nbsp;[IOException]&nbsp;if&nbsp;the&nbsp;file&nbsp;cannot&nbsp;be&nbsp;read&nbsp;successfully.</font><br />
 <a name="21"><font color="#808080">21</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;or&nbsp;a&nbsp;[KRisException]&nbsp;if&nbsp;the&nbsp;lines&nbsp;cannot&nbsp;be&nbsp;parsed&nbsp;successfully.</font><br />
 <a name="22"><font color="#808080">22</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*/</font><br />
@@ -55,7 +55,7 @@ ImportExtensions.kt
 <a name="24"><font color="#808080">24</font>&nbsp;</a><font color="#000000">fun&nbsp;File.process</font><font color="#000000">()&nbsp;</font><font color="#000000">=&nbsp;KRisIO.process</font><font color="#000000">(</font><font color="#0000c0"><b>this</b></font><font color="#000000">)</font><br />
 <a name="25"><font color="#808080">25</font>&nbsp;</a><font color="#ffffff"></font><br />
 <a name="26"><font color="#808080">26</font>&nbsp;</a><font color="#008000">/**</font><br />
-<a name="27"><font color="#808080">27</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Converts&nbsp;the&nbsp;RISFile&nbsp;lines&nbsp;from&nbsp;the&nbsp;file&nbsp;with&nbsp;the&nbsp;path&nbsp;provided&nbsp;as&nbsp;receiver&nbsp;into&nbsp;a&nbsp;list&nbsp;of&nbsp;[RisRecord]s.</font><br />
+<a name="27"><font color="#808080">27</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Converts&nbsp;the&nbsp;RISFile&nbsp;lines&nbsp;from&nbsp;the&nbsp;file&nbsp;with&nbsp;the&nbsp;path&nbsp;provided&nbsp;as&nbsp;receiver&nbsp;into&nbsp;a&nbsp;list&nbsp;of&nbsp;RisRecords.</font><br />
 <a name="28"><font color="#808080">28</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;May&nbsp;throw&nbsp;an&nbsp;[IOException]&nbsp;if&nbsp;the&nbsp;file&nbsp;cannot&nbsp;be&nbsp;read&nbsp;successfully.</font><br />
 <a name="29"><font color="#808080">29</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;or&nbsp;a&nbsp;[KRisException]&nbsp;if&nbsp;the&nbsp;lines&nbsp;cannot&nbsp;be&nbsp;parsed&nbsp;successfully.</font><br />
 <a name="30"><font color="#808080">30</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*/</font><br />
@@ -63,7 +63,7 @@ ImportExtensions.kt
 <a name="32"><font color="#808080">32</font>&nbsp;</a><font color="#000000">fun&nbsp;String.process</font><font color="#000000">()&nbsp;</font><font color="#000000">=&nbsp;KRisIO.process</font><font color="#000000">(</font><font color="#0000c0"><b>this</b></font><font color="#000000">)</font><br />
 <a name="33"><font color="#808080">33</font>&nbsp;</a><font color="#ffffff"></font><br />
 <a name="34"><font color="#808080">34</font>&nbsp;</a><font color="#008000">/**</font><br />
-<a name="35"><font color="#808080">35</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Converts&nbsp;the&nbsp;RISFile&nbsp;lines&nbsp;provided&nbsp;by&nbsp;the&nbsp;[InputStream]&nbsp;as&nbsp;receiver&nbsp;&nbsp;into&nbsp;a&nbsp;list&nbsp;of&nbsp;[RisRecord]s.</font><br />
+<a name="35"><font color="#808080">35</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;Converts&nbsp;the&nbsp;RISFile&nbsp;lines&nbsp;provided&nbsp;by&nbsp;the&nbsp;[InputStream]&nbsp;as&nbsp;receiver&nbsp;&nbsp;into&nbsp;a&nbsp;list&nbsp;of&nbsp;RisRecords.</font><br />
 <a name="36"><font color="#808080">36</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;May&nbsp;throw&nbsp;an&nbsp;[IOException]&nbsp;if&nbsp;the&nbsp;stream&nbsp;cannot&nbsp;be&nbsp;read&nbsp;successfully.</font><br />
 <a name="37"><font color="#808080">37</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*&nbsp;or&nbsp;a&nbsp;[KRisException]&nbsp;if&nbsp;the&nbsp;lines&nbsp;cannot&nbsp;be&nbsp;parsed&nbsp;successfully.</font><br />
 <a name="38"><font color="#808080">38</font>&nbsp;</a><font color="#ffffff">&nbsp;</font><font color="#008000">*/</font><br />
