--- a/api-html/ch/difty/kris/domain/package-frame.html
+++ b/api-html/ch/difty/kris/domain/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-ch.difty.kris.domain (KRis 0.3.0-beta.0.3+7e4836a)
+ch.difty.kris.domain (KRis 0.2.2)
 </TITLE>
 
 <META NAME="keywords" CONTENT="ch.difty.kris.domain">
