--- a/index.html
+++ b/index.html
@@ -600,8 +600,8 @@ We will receive a list of [RisRecord] instances.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 0.3.0-beta.0.3+7e4836a<br>
-Last updated 2020-03-28 22:30:34 +0100
+Version 0.2.2<br>
+Last updated 2020-04-11 20:19:34 UTC
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
