--- a/kapi/-k-ris/ch.difty.kris/java.io.-input-stream/index.html
+++ b/kapi/-k-ris/ch.difty.kris/java.io.-input-stream/index.html
@@ -15,7 +15,7 @@
 <h4><a href="process.html">process</a></h4>
 </td>
 <td>
-<p>Converts the RISFile lines provided by the <a href="https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html">InputStream</a> as receiver  into a list of <a href="#">RisRecord</a>s.
+<p>Converts the RISFile lines provided by the <a href="https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html">InputStream</a> as receiver  into a list of RisRecords.
 May throw an <a href="https://docs.oracle.com/javase/8/docs/api/java/io/IOException.html">IOException</a> if the stream cannot be read successfully.
 or a <a href="../-k-ris-exception/index.html">KRisException</a> if the lines cannot be parsed successfully.</p>
 <code><span class="keyword">fun </span><a href="https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html"><span class="identifier">InputStream</span></a><span class="symbol">.</span><span class="identifier">process</span><span class="symbol">(</span><span class="symbol">)</span><span class="symbol">: </span><a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html"><span class="identifier">List</span></a><span class="symbol">&lt;</span><a href="../../ch.difty.kris.domain/-ris-record/index.html"><span class="identifier">RisRecord</span></a><span class="symbol">&gt;</span></code></td>
