--- a/kapi/-k-ris/ch.difty.kris.domain/index.html
+++ b/kapi/-k-ris/ch.difty.kris.domain/index.html
@@ -8,6 +8,10 @@
 <a href="../index.html">KRis</a>&nbsp;/&nbsp;<a href="./index.html">ch.difty.kris.domain</a><br/>
 <br/>
 <h2>Package ch.difty.kris.domain</h2>
+<p>Home of the <code>RisRecord</code>, the internal representation of a RIS data record.
+Also contains the <code>RisType</code>, in identifier for the various types of <code>RisRecords</code>,
+and the <code>RisTag</code>, an enum that captures all the relevant attributes of the individual
+tags that must or may appear in a <code>RisRecord</code>.</p>
 <h3>Types</h3>
 <table>
 <tbody>
