--- a/kapi/-k-ris/ch.difty.kris/index.html
+++ b/kapi/-k-ris/ch.difty.kris/index.html
@@ -8,6 +8,15 @@
 <a href="../index.html">KRis</a>&nbsp;/&nbsp;<a href="./index.html">ch.difty.kris</a><br/>
 <br/>
 <h2>Package ch.difty.kris</h2>
+<p><code>KRis</code> is the object at the core of the KRis library. If offers a number of accessor methods
+to Java Clients that offer to convert <code>String</code>s to <code>RisRecord</code>s or vice versa, in different
+flavors of data input, non-blockingly using kotlin flows or RxJava observables or in a blocking
+manner accepting lists.</p>
+<p><code>KrisExtensions</code> offers a number of handy extension functions to kotlin clients.</p>
+<ul><li><code>KRisIO</code> can be used from Java or Kotlin to work with exiting readers, files or streams.</li>
+<li><code>ExportExtensions</code> contains extension functions to the kotlin client for exporting <code>RisRecord</code>s.</li>
+<li><code>ImportExtensions</code> contains extension functions to the kotlin client for importing <code>RisRecord</code>s.</li>
+</ul>
 <h3>Types</h3>
 <table>
 <tbody>
