Publish guide for 0.3.0-beta.0.16+20200411T205052Z

--- a/api-html/ch/difty/kris/package-frame.html
+++ b/api-html/ch/difty/kris/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-ch.difty.kris (KRis 0.2.3)
+ch.difty.kris (KRis 0.3.0-beta.0.16+20200411T205052Z)
 </TITLE>
 
 <META NAME="keywords" CONTENT="ch.difty.kris">
