--- a/api-html/overview-summary.html
+++ b/api-html/overview-summary.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-Overview (KRis 0.2.3)
+Overview (KRis 0.3.0-beta.0.16+20200411T205052Z)
 </TITLE>
 <LINK REL ="stylesheet" TYPE="text/css" HREF="stylesheet.css" TITLE="Style">
 <SCRIPT type="text/javascript">
@@ -18,7 +18,7 @@ parent.document.title = document.title;
 <TABLE BORDER="0" WIDTH="100%" CELLPADDING="1" CELLSPACING="0">
     <TR>
         <TD ALIGN="right" VALIGN="top" ROWSPAN=3><EM>
-            <b>KRis 0.2.3</b></EM>
+            <b>KRis 0.3.0-beta.0.16+20200411T205052Z</b></EM>
         </TD>
     </TR>
 </TABLE>
