--- a/kapi/-k-ris/alltypes/index.html
+++ b/kapi/-k-ris/alltypes/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="../../style.css">
 </HEAD>
 <BODY>
-<p>KRis core module, containing the domain logic on how to interpret RIS records and RIS files.</p>
+<h2>kris-core</h2>
 <h3>All Types</h3>
 <table>
 <tbody>
