Publish guide for 0.2.4

--- a/index.html
+++ b/index.html
@@ -600,8 +600,8 @@ We will receive a list of [RisRecord] instances.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 0.3.0-beta.0.17+20200411T220138Z<br>
-Last updated 2020-03-28 22:30:34 +0100
+Version 0.2.4<br>
+Last updated 2020-04-11 22:08:13 UTC
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
