--- a/kapi/-k-ris/index.html
+++ b/kapi/-k-ris/index.html
@@ -7,16 +7,16 @@
 <BODY>
 <a href="./index.html">KRis</a><br/>
 <br/>
-<h2>kris-core</h2>
+<h2>Module kris-core</h2>
 <p>KRis core module, containing the domain logic on how to interpret RIS records and RIS files.</p>
 <p>This module can be used in case you already have the flows or collections of Strings and handle
 reading from or writing to files yourself.</p>
 <p>Relate to the module <code>kris-io</code> to find add-on functionality that takes care of the IO tasks
 like writing to file or reading to file.</p>
-<h2>kris-guide</h2>
+<h2>Module kris-guide</h2>
 <p>This module contains code samples sourced by the guide.
 The compiler ensures the code is not outdated.</p>
-<h2>kris-io</h2>
+<h2>Module kris-io</h2>
 <p>KRis extra module that builds on top of <code>kris-core</code> and offers additional functionality
 to read from files or write to files in various ways. If your application manages that
 autonomously, you don't need the IO module, e.g. in the context of a web application that
