--- a/api-html/index.html
+++ b/api-html/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-KRis 0.3.0-beta.0.17+20200411T220138Z
+KRis 0.2.4
 </TITLE>
 
 <link href="doc.ico" type="image/x-icon" rel="shortcut icon">
