Publish guide for 0.2.5

--- a/api-html/ch/difty/kris/domain/package-frame.html
+++ b/api-html/ch/difty/kris/domain/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-ch.difty.kris.domain (KRis 0.2.4)
+ch.difty.kris.domain (KRis unspecified)
 </TITLE>
 
 <META NAME="keywords" CONTENT="ch.difty.kris.domain">
