--- a/api-html/ch/difty/kris/implementation/package-frame.html
+++ b/api-html/ch/difty/kris/implementation/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-ch.difty.kris.implementation (KRis 0.2.4)
+ch.difty.kris.implementation (KRis unspecified)
 </TITLE>
 
 <META NAME="keywords" CONTENT="ch.difty.kris.implementation">
