--- a/api-html/ch/difty/kris/package-frame.html
+++ b/api-html/ch/difty/kris/package-frame.html
@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-ch.difty.kris (KRis 0.2.4)
+ch.difty.kris (KRis unspecified)
 </TITLE>
 
 <META NAME="keywords" CONTENT="ch.difty.kris">
