Publish guide for 0.2.6

--- a/kapi/navigation.html
+++ b/kapi/navigation.html
@@ -433,10 +433,13 @@
       <div class="sideMenuPart" id="nav-submenu-1-2-52" pageId="ch.difty.kris.domain/RisType.THES///PointingToDeclaration/">
         <div class="overview"><a href="-k-ris/ch.difty.kris.domain/-ris-type/-t-h-e-s/index.html"><span>T</span><wbr></wbr><span>H</span><wbr></wbr><span>E</span><wbr></wbr><span>S</span></a></div>
       </div>
-      <div class="sideMenuPart" id="nav-submenu-1-2-53" pageId="ch.difty.kris.domain/RisType.UNPB///PointingToDeclaration/">
+      <div class="sideMenuPart" id="nav-submenu-1-2-53" pageId="ch.difty.kris.domain/RisType.UNBILL///PointingToDeclaration/">
+        <div class="overview"><a href="-k-ris/ch.difty.kris.domain/-ris-type/-u-n-b-i-l-l/index.html"><span>U</span><wbr></wbr><span>N</span><wbr></wbr><span>B</span><wbr></wbr><span>I</span><wbr></wbr><span>L</span><wbr></wbr><span>L</span></a></div>
+      </div>
+      <div class="sideMenuPart" id="nav-submenu-1-2-54" pageId="ch.difty.kris.domain/RisType.UNPB///PointingToDeclaration/">
         <div class="overview"><a href="-k-ris/ch.difty.kris.domain/-ris-type/-u-n-p-b/index.html"><span>U</span><wbr></wbr><span>N</span><wbr></wbr><span>P</span><wbr></wbr><span>B</span></a></div>
       </div>
-      <div class="sideMenuPart" id="nav-submenu-1-2-54" pageId="ch.difty.kris.domain/RisType.VIDEO///PointingToDeclaration/">
+      <div class="sideMenuPart" id="nav-submenu-1-2-55" pageId="ch.difty.kris.domain/RisType.VIDEO///PointingToDeclaration/">
         <div class="overview"><a href="-k-ris/ch.difty.kris.domain/-ris-type/-v-i-d-e-o/index.html"><span>V</span><wbr></wbr><span>I</span><wbr></wbr><span>D</span><wbr></wbr><span>E</span><wbr></wbr><span>O</span></a></div>
       </div>
     </div>
