--- a/kapi/-k-ris/ch.difty.kris.domain/-ris-type/-u-n-b-i-l-l/index.html
+++ b/kapi/-k-ris/ch.difty.kris.domain/-ris-type/-u-n-b-i-l-l/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-    <title>EQUA</title>
+    <title>UNBILL</title>
     <link href="../../../../images/logo-icon.svg" rel="icon" type="image/svg">
     <link href="../../../../styles/style.css" rel="Stylesheet">
     <script type="text/javascript" src="../../../../scripts/navigationLoader.js" async="async"></script>
@@ -23,12 +23,12 @@
         <div id="searchBar"></div>
         <script type="text/javascript" src="../../../../scripts/pages.js"></script>
         <script type="text/javascript" src="../../../../scripts/main.js"></script>
-        <div id="content" pageIds="ch.difty.kris.domain/RisType.EQUA///PointingToDeclaration/">
-          <div class="breadcrumbs"><a href="../../../index.html">KRis</a>/<a href="../../index.html">ch.difty.kris.domain</a>/<a href="../index.html">RisType</a>/<a href="index.html">EQUA</a></div>
+        <div id="content" pageIds="ch.difty.kris.domain/RisType.UNBILL///PointingToDeclaration/">
+          <div class="breadcrumbs"><a href="../../../index.html">KRis</a>/<a href="../../index.html">ch.difty.kris.domain</a>/<a href="../index.html">RisType</a>/<a href="index.html">UNBILL</a></div>
           <div class="cover ">
             <div class="filter-section" id="filter-section"><button class="platform-tag platform-selector jvm-like" data-active="" data-filter=":kris-core:dokkaHtml/main">project ':kris-core'</button></div>
-            <h1 class="cover"><a data-name="equa"></a><span>E</span><wbr></wbr><span>Q</span><wbr></wbr><span>U</span><wbr></wbr><span>A</span></h1>
-            <div class="platform-hinted " data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":kris-core:dokkaHtml/main"><p class="paragraph">Equation</p><div class="symbol monospace block"><div class="block"><a href="index.html">EQUA</a>(&quot;Equation&quot;)</div><span class="top-right-position"><span class="copy-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <h1 class="cover"><a data-name="unbill"></a><span>U</span><wbr></wbr><span>N</span><wbr></wbr><span>B</span><wbr></wbr><span>I</span><wbr></wbr><span>L</span><wbr></wbr><span>L</span></h1>
+            <div class="platform-hinted " data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":kris-core:dokkaHtml/main"><p class="paragraph">Unenacted Bill</p><div class="symbol monospace block"><div class="block"><a href="index.html">UNBILL</a>(&quot;Unenacted Bill&quot;)</div><span class="top-right-position"><span class="copy-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M5 4H15V16H5V4ZM17 7H19V18V20H17H8V18H17V7Z" fill="black"/>
                        </svg></span><div class="copy-popup-wrapper popup-to-left"><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M18 9C18 14 14 18 9 18C4 18 0 14 0 9C0 4 4 0 9 0C14 0 18 4 18 9ZM14.2 6.2L12.8 4.8L7.5 10.1L5.3 7.8L3.8 9.2L7.5 13L14.2 6.2Z" fill="#4DBB5F"/>
@@ -250,9 +250,9 @@
                 </div>
               </div>
               <h2 class=""><a data-name="properties"></a>Properties</h2>
-              <div class="table" data-togglable="Properties"><a data-name="ch.difty.kris.domain/RisType.EQUA/description/#/PointingToDeclaration/"></a>
+              <div class="table" data-togglable="Properties"><a data-name="ch.difty.kris.domain/RisType.UNBILL/description/#/PointingToDeclaration/"></a>
                 <div class="table-row" data-filterable-current=":kris-core:dokkaHtml/main" data-filterable-set=":kris-core:dokkaHtml/main">
-                  <div class="main-subrow "><span><a href="index.html#ch.difty.kris.domain/RisType.EQUA/description/#/PointingToDeclaration/">description</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="ch.difty.kris.domain/RisType.EQUA/description/#/PointingToDeclaration/"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <div class="main-subrow "><span><a href="index.html#ch.difty.kris.domain/RisType.UNBILL/description/#/PointingToDeclaration/">description</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="ch.difty.kris.domain/RisType.UNBILL/description/#/PointingToDeclaration/"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M21.2496 5.3C20.3496 4.5 19.2496 4 18.0496 4C16.8496 4 15.6496 4.5 14.8496 5.3L10.3496 9.8L11.7496 11.2L16.2496 6.7C17.2496 5.7 18.8496 5.7 19.8496 6.7C20.8496 7.7 20.8496 9.3 19.8496 10.3L15.3496 14.8L16.7496 16.2L21.2496 11.7C22.1496 10.8 22.5496 9.7 22.5496 8.5C22.5496 7.3 22.1496 6.2 21.2496 5.3Z"/>
     <path d="M8.35 16.7998C7.35 17.7998 5.75 17.7998 4.75 16.7998C3.75 15.7998 3.75 14.1998 4.75 13.1998L9.25 8.6998L7.85 7.2998L3.35 11.7998C1.55 13.5998 1.55 16.3998 3.35 18.1998C4.25 19.0998 5.35 19.4998 6.55 19.4998C7.75 19.4998 8.85 19.0998 9.75 18.1998L14.25 13.6998L12.85 12.2998L8.35 16.7998Z"/>
 </svg></span>
@@ -267,7 +267,7 @@
                   <div class="platform-dependent-row keyValue">
                     <div></div>
                     <div class="title">
-                      <div class="platform-hinted " data-platform-hinted="data-platform-hinted" data-togglable="Properties"><div class="content sourceset-depenent-content" data-active="" data-togglable=":kris-core:dokkaHtml/main"><div class="symbol monospace">override val <a href="index.html#ch.difty.kris.domain/RisType.EQUA/description/#/PointingToDeclaration/">description</a>: <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html">String</a><span class="top-right-position"><span class="copy-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <div class="platform-hinted " data-platform-hinted="data-platform-hinted" data-togglable="Properties"><div class="content sourceset-depenent-content" data-active="" data-togglable=":kris-core:dokkaHtml/main"><div class="symbol monospace">override val <a href="index.html#ch.difty.kris.domain/RisType.UNBILL/description/#/PointingToDeclaration/">description</a>: <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html">String</a><span class="top-right-position"><span class="copy-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M5 4H15V16H5V4ZM17 7H19V18V20H17H8V18H17V7Z" fill="black"/>
                        </svg></span><div class="copy-popup-wrapper popup-to-left"><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M18 9C18 14 14 18 9 18C4 18 0 14 0 9C0 4 4 0 9 0C14 0 18 4 18 9ZM14.2 6.2L12.8 4.8L7.5 10.1L5.3 7.8L3.8 9.2L7.5 13L14.2 6.2Z" fill="#4DBB5F"/>
@@ -275,9 +275,9 @@
                     </div>
                   </div>
                 </div>
-<a data-name="ch.difty.kris.domain/RisType.EQUA/name/#/PointingToDeclaration/"></a>
+<a data-name="ch.difty.kris.domain/RisType.UNBILL/name/#/PointingToDeclaration/"></a>
                 <div class="table-row" data-filterable-current=":kris-core:dokkaHtml/main" data-filterable-set=":kris-core:dokkaHtml/main">
-                  <div class="main-subrow "><span><a href="index.html#ch.difty.kris.domain/RisType.EQUA/name/#/PointingToDeclaration/">name</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="ch.difty.kris.domain/RisType.EQUA/name/#/PointingToDeclaration/"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <div class="main-subrow "><span><a href="index.html#ch.difty.kris.domain/RisType.UNBILL/name/#/PointingToDeclaration/">name</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="ch.difty.kris.domain/RisType.UNBILL/name/#/PointingToDeclaration/"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M21.2496 5.3C20.3496 4.5 19.2496 4 18.0496 4C16.8496 4 15.6496 4.5 14.8496 5.3L10.3496 9.8L11.7496 11.2L16.2496 6.7C17.2496 5.7 18.8496 5.7 19.8496 6.7C20.8496 7.7 20.8496 9.3 19.8496 10.3L15.3496 14.8L16.7496 16.2L21.2496 11.7C22.1496 10.8 22.5496 9.7 22.5496 8.5C22.5496 7.3 22.1496 6.2 21.2496 5.3Z"/>
     <path d="M8.35 16.7998C7.35 17.7998 5.75 17.7998 4.75 16.7998C3.75 15.7998 3.75 14.1998 4.75 13.1998L9.25 8.6998L7.85 7.2998L3.35 11.7998C1.55 13.5998 1.55 16.3998 3.35 18.1998C4.25 19.0998 5.35 19.4998 6.55 19.4998C7.75 19.4998 8.85 19.0998 9.75 18.1998L14.25 13.6998L12.85 12.2998L8.35 16.7998Z"/>
 </svg></span>
@@ -292,7 +292,7 @@
                   <div class="platform-dependent-row keyValue">
                     <div></div>
                     <div class="title">
-                      <div class="platform-hinted " data-platform-hinted="data-platform-hinted" data-togglable="Properties"><div class="content sourceset-depenent-content" data-active="" data-togglable=":kris-core:dokkaHtml/main"><div class="symbol monospace">override val <a href="index.html#ch.difty.kris.domain/RisType.EQUA/name/#/PointingToDeclaration/">name</a>: <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html">String</a><span class="top-right-position"><span class="copy-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <div class="platform-hinted " data-platform-hinted="data-platform-hinted" data-togglable="Properties"><div class="content sourceset-depenent-content" data-active="" data-togglable=":kris-core:dokkaHtml/main"><div class="symbol monospace">override val <a href="index.html#ch.difty.kris.domain/RisType.UNBILL/name/#/PointingToDeclaration/">name</a>: <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html">String</a><span class="top-right-position"><span class="copy-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M5 4H15V16H5V4ZM17 7H19V18V20H17H8V18H17V7Z" fill="black"/>
                        </svg></span><div class="copy-popup-wrapper popup-to-left"><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M18 9C18 14 14 18 9 18C4 18 0 14 0 9C0 4 4 0 9 0C14 0 18 4 18 9ZM14.2 6.2L12.8 4.8L7.5 10.1L5.3 7.8L3.8 9.2L7.5 13L14.2 6.2Z" fill="#4DBB5F"/>
@@ -300,9 +300,9 @@
                     </div>
                   </div>
                 </div>
-<a data-name="ch.difty.kris.domain/RisType.EQUA/ordinal/#/PointingToDeclaration/"></a>
+<a data-name="ch.difty.kris.domain/RisType.UNBILL/ordinal/#/PointingToDeclaration/"></a>
                 <div class="table-row" data-filterable-current=":kris-core:dokkaHtml/main" data-filterable-set=":kris-core:dokkaHtml/main">
-                  <div class="main-subrow "><span><a href="index.html#ch.difty.kris.domain/RisType.EQUA/ordinal/#/PointingToDeclaration/">ordinal</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="ch.difty.kris.domain/RisType.EQUA/ordinal/#/PointingToDeclaration/"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <div class="main-subrow "><span><a href="index.html#ch.difty.kris.domain/RisType.UNBILL/ordinal/#/PointingToDeclaration/">ordinal</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="ch.difty.kris.domain/RisType.UNBILL/ordinal/#/PointingToDeclaration/"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M21.2496 5.3C20.3496 4.5 19.2496 4 18.0496 4C16.8496 4 15.6496 4.5 14.8496 5.3L10.3496 9.8L11.7496 11.2L16.2496 6.7C17.2496 5.7 18.8496 5.7 19.8496 6.7C20.8496 7.7 20.8496 9.3 19.8496 10.3L15.3496 14.8L16.7496 16.2L21.2496 11.7C22.1496 10.8 22.5496 9.7 22.5496 8.5C22.5496 7.3 22.1496 6.2 21.2496 5.3Z"/>
     <path d="M8.35 16.7998C7.35 17.7998 5.75 17.7998 4.75 16.7998C3.75 15.7998 3.75 14.1998 4.75 13.1998L9.25 8.6998L7.85 7.2998L3.35 11.7998C1.55 13.5998 1.55 16.3998 3.35 18.1998C4.25 19.0998 5.35 19.4998 6.55 19.4998C7.75 19.4998 8.85 19.0998 9.75 18.1998L14.25 13.6998L12.85 12.2998L8.35 16.7998Z"/>
 </svg></span>
@@ -317,7 +317,7 @@
                   <div class="platform-dependent-row keyValue">
                     <div></div>
                     <div class="title">
-                      <div class="platform-hinted " data-platform-hinted="data-platform-hinted" data-togglable="Properties"><div class="content sourceset-depenent-content" data-active="" data-togglable=":kris-core:dokkaHtml/main"><div class="symbol monospace">override val <a href="index.html#ch.difty.kris.domain/RisType.EQUA/ordinal/#/PointingToDeclaration/">ordinal</a>: <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html">Int</a><span class="top-right-position"><span class="copy-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <div class="platform-hinted " data-platform-hinted="data-platform-hinted" data-togglable="Properties"><div class="content sourceset-depenent-content" data-active="" data-togglable=":kris-core:dokkaHtml/main"><div class="symbol monospace">override val <a href="index.html#ch.difty.kris.domain/RisType.UNBILL/ordinal/#/PointingToDeclaration/">ordinal</a>: <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-int/index.html">Int</a><span class="top-right-position"><span class="copy-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M5 4H15V16H5V4ZM17 7H19V18V20H17H8V18H17V7Z" fill="black"/>
                        </svg></span><div class="copy-popup-wrapper popup-to-left"><svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M18 9C18 14 14 18 9 18C4 18 0 14 0 9C0 4 4 0 9 0C14 0 18 4 18 9ZM14.2 6.2L12.8 4.8L7.5 10.1L5.3 7.8L3.8 9.2L7.5 13L14.2 6.2Z" fill="#4DBB5F"/>
